--- a/templates/search.html
+++ b/templates/search.html
@@ -63,7 +63,7 @@
                                     </div>
                                 </div>
                             </div>
-                            {% for cat in category_product %}
+                            {% for cat in search_product %}
                             <div class="col-md-4">
                                 <div class="product-item">
                                     <div class="product-title">
