--- a/templates/product-detail.html
+++ b/templates/product-detail.html
@@ -18,30 +18,23 @@
         <div class="product-detail">
             <div class="container-fluid">
                 <div class="row">
+                    {% for detail in product_details %}
                     <div class="col-lg-8">
                         <div class="product-detail-top">
                             <div class="row align-items-center">
                                 <div class="col-md-5">
                                     <div class="product-slider-single normal-slider">
-                                        <img src="img/product-1.jpg" alt="Product Image">
-                                        <img src="img/product-3.jpg" alt="Product Image">
-                                        <img src="img/product-5.jpg" alt="Product Image">
-                                        <img src="img/product-7.jpg" alt="Product Image">
-                                        <img src="img/product-9.jpg" alt="Product Image">
-                                        <img src="img/product-10.jpg" alt="Product Image">
+                                        <img src="{{detail.image.url}}" alt="Product Image">
+
                                     </div>
                                     <div class="product-slider-single-nav normal-slider">
-                                        <div class="slider-nav-img"><img src="img/product-1.jpg" alt="Product Image"></div>
-                                        <div class="slider-nav-img"><img src="img/product-3.jpg" alt="Product Image"></div>
-                                        <div class="slider-nav-img"><img src="img/product-5.jpg" alt="Product Image"></div>
-                                        <div class="slider-nav-img"><img src="img/product-7.jpg" alt="Product Image"></div>
-                                        <div class="slider-nav-img"><img src="img/product-9.jpg" alt="Product Image"></div>
-                                        <div class="slider-nav-img"><img src="img/product-10.jpg" alt="Product Image"></div>
+                                        <div class="slider-nav-img"><img src="{{detail.image.url}}" alt="Product Image"></div>
+
                                     </div>
                                 </div>
                                 <div class="col-md-7">
                                     <div class="product-content">
-                                        <div class="title"><h2>Product Name</h2></div>
+                                        <div class="title"><h2>{{detail.name}}</h2></div>
                                         <div class="ratting">
                                             <i class="fa fa-star"></i>
                                             <i class="fa fa-star"></i>
@@ -51,7 +44,11 @@
                                         </div>
                                         <div class="price">
                                             <h4>Price:</h4>
-                                            <p>$99 <span>$149</span></p>
+                                            {% if detail.discounted_price > 0 %}
+                                            <p>${{detail.discounted_price}} <span>${{detail.price}}</span></p>
+                                            {% else %}
+                                            <p>${{detail.price}}</p>
+                                            {% endif %}
                                         </div>
                                         <div class="quantity">
                                             <h4>Quantity:</h4>
@@ -105,33 +102,29 @@
                                     <div id="description" class="container tab-pane active">
                                         <h4>Product description</h4>
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In condimentum quam ac mi viverra dictum. In efficitur ipsum diam, at dignissim lorem tempor in. Vivamus tempor hendrerit finibus. Nulla tristique viverra nisl, sit amet bibendum ante suscipit non. Praesent in faucibus tellus, sed gravida lacus. Vivamus eu diam eros. Aliquam et sapien eget arcu rhoncus scelerisque. Suspendisse sit amet neque neque. Praesent suscipit et magna eu iaculis. Donec arcu libero, commodo ac est a, malesuada finibus dolor. Aenean in ex eu velit semper fermentum. In leo dui, aliquet sit amet eleifend sit amet, varius in turpis. Maecenas fermentum ut ligula at consectetur. Nullam et tortor leo. 
+                                            {{detail.description}}
                                         </p>
                                     </div>
                                     <div id="specification" class="container tab-pane fade">
                                         <h4>Product specification</h4>
-                                        <ul>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                        </ul>
+                                        {{detail.specification}}
                                     </div>
                                     <div id="reviews" class="container tab-pane fade">
+                                        {% for rev in product_reviews %}
                                         <div class="reviews-submitted">
-                                            <div class="reviewer">Phasellus Gravida - <span>01 Jan 2020</span></div>
+                                            <div class="reviewer">{{rev.name}}<span>01 Jan 2020</span></div>
                                             <div class="ratting">
+                                                {% if rev.star %}
+                                                {% for i in 1|ljust:rev.star %}
                                                 <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
+                                                {% endfor %}
+                                                {% endif %}
                                             </div>
                                             <p>
-                                                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+                                               {{rev.name}}
                                             </p>
                                         </div>
+                                        {% endfor %}
                                         <div class="reviews-submit">
                                             <h4>Give your Review:</h4>
                                             <div class="ratting">
@@ -142,18 +135,23 @@
                                                 <i class="far fa-star"></i>
                                             </div>
                                             <div class="row form">
+                                                <form method="POST" action = "/reviews">
+                                                    {% csrf_token %}
                                                 <div class="col-sm-6">
-                                                    <input type="text" placeholder="Name">
+                                                    <input name = "name" type="text" placeholder="Name">
                                                 </div>
                                                 <div class="col-sm-6">
-                                                    <input type="email" placeholder="Email">
+                                                    <input name = "email" type="email" placeholder="Email">
                                                 </div>
                                                 <div class="col-sm-12">
-                                                    <textarea placeholder="Review"></textarea>
+                                                    <textarea name = "review" placeholder="Review"></textarea>
+                                                </div><div class="col-sm-6">
+                                                    <input name = "slug" type="hidden" value = "{{detail.slug}}">
                                                 </div>
                                                 <div class="col-sm-12">
-                                                    <button>Submit</button>
+                                                    <button type = "Submit">Submit</button>
                                                 </div>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
@@ -310,7 +308,7 @@
                             </div>
                         </div>
                     </div>
-                    
+                    {% endfor %}
                     <!-- Side Bar Start -->
                     <div class="col-lg-4 sidebar">
                         <div class="sidebar-widget category">
