--- a/templates/index.html
+++ b/templates/index.html
@@ -245,7 +245,7 @@
                                 {% else %}
                                 {{hot.price}}
                                 {% endif %}</h3>
-                                <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Buy Now</a>
+                                <a class="btn" href="/add_to_cart/{{hot.slug}}"><i class="fa fa-shopping-cart"></i>Buy Now</a>
                             </div>
                         </div>
                     </div>
@@ -309,7 +309,7 @@
                                 {% else %}
                                 {{new.price}}
                                 {% endif %}</h3>
-                                <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Buy Now</a>
+                                <a class="btn" href="/add_to_cart/{{new.slug}}"><i class="fa fa-shopping-cart"></i>Buy Now</a>
                             </div>
                         </div>
                     </div>
